# EmbeddingPython3inCppwithCMake

./: .gitignore  CMakeLists.txt  README.md  build_all.sh
examples/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
include/: pyhelper.h
script/: ex_class.py  ex_cpp_funcs.py  ex_python_funcs.py  ex_script_run.py
